# MathKit

./: CMakeLists.txt  MKArgument.hpp  MKFloatLib.cpp  MKFloatLib.hpp  MKGaussElim.cpp  MKGaussElim.hpp  MKMatrix.hpp  MKVector.cpp  MKVector.hpp  T_MKArgument.cpp  T_MKGaussElim.cpp  T_MKMatrix.cpp  T_MKVector.cpp  T_MKVector.hpp  T_Nested_MKVector.cpp
FloatLib/: CMakeLists.txt  FLFunctions.cpp  FLFunctions.hpp
TestKit/: CMakeLists.txt  TKAttributeContainer.cpp  TKAttributeContainer.hpp  TKBaseAttribute.hpp  TKCumulableAttribute.hpp  TKNumberedAttribute.hpp
